--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,19 @@
 fastapi
+uvicorn
+sqlalchemy
+psycopg2-binary
+python-dotenv
+requests
+pydantic
+python-multipart
+celery
+redis
+replicate
+pillow
+rembg
+opencv-python-headless
+numpy
+supabase
 uvicorn[standard]
 celery[redis]
 sqlalchemy
