--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim
 
 # Install system dependencies
 RUN apt-get update \
-    && apt-get install -y gcc g++ libpq-dev libgl1 libglib2.0-0 \
+    && apt-get install -y gcc g++ libpq-dev libgl1 libglib2.0-0 redis-server \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
